force-app/main/default/objects/Employee_Time_Sheet__c/Employee_Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Employee Time Sheet</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Time Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Time Sheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>