force-app/main/default/objects/Employee_Time_Sheet__c/fields/Business_Development__c.field-meta.xml
<CustomField>
    <fullName>Business_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Development</label>
    <type>Checkbox</type>
</CustomField>