force-app/main/default/objects/Employee_Time_Sheet__c/fields/Business_Development_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Time_Out__c</fullName>
    <label>Business Development Time Out</label>
    <type>Time</type>
</CustomField>