force-app/main/default/objects/Employee_Time_Sheet__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection</label>
    <type>Checkbox</type>
</CustomField>