force-app/main/default/objects/Employee_Time_Sheet__c/fields/Inspection_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Time_In__c</fullName>
    <label>Inspection Time In</label>
    <type>Time</type>
</CustomField>