force-app/main/default/objects/Employee_Time_Sheet__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapping</label>
    <type>Checkbox</type>
</CustomField>