force-app/main/default/objects/Employee_Time_Sheet__c/fields/Mapping_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Time_Out__c</fullName>
    <label>Mapping Time Out</label>
    <type>Time</type>
</CustomField>