force-app/main/default/objects/Employee_Time_Sheet__c/fields/Name_of_the_Client__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Client__c</fullName>
    <label>Name of the Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>