force-app/main/default/objects/Employee_Time_Sheet__c/fields/Negotiation_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation Meeting</label>
    <type>Checkbox</type>
</CustomField>