force-app/main/default/objects/Employee_Time_Sheet__c/fields/Negotiation_Meeting_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Meeting_Time_Out__c</fullName>
    <label>Negotiation Meeting Time Out</label>
    <type>Time</type>
</CustomField>