force-app/main/default/objects/Employee_Time_Sheet__c/fields/No_of_prop_added_in_salesforce__c.field-meta.xml
<CustomField>
    <fullName>No_of_prop_added_in_salesforce__c</fullName>
    <label>No of prop added in salesforce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>