force-app/main/default/objects/Employee_Time_Sheet__c/fields/No_of_property_inspected__c.field-meta.xml
<CustomField>
    <fullName>No_of_property_inspected__c</fullName>
    <label>No of property inspected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>