force-app/main/default/objects/Employee_Time_Sheet__c/fields/No_of_property_mapped__c.field-meta.xml
<CustomField>
    <fullName>No_of_property_mapped__c</fullName>
    <label>No of property mapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>