force-app/main/default/objects/Employee_Time_Sheet__c/fields/Other_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_In__c</fullName>
    <label>Other Time In</label>
    <type>Time</type>
</CustomField>