force-app/main/default/objects/Employee_Time_Sheet__c/fields/Other_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Out__c</fullName>
    <label>Other Time Out</label>
    <type>Time</type>
</CustomField>