force-app/main/default/objects/Employee_Time_Sheet__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Business development</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Negotiation Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>