force-app/main/default/objects/Employee_Time_Sheet__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <label>Time Out</label>
    <type>Time</type>
</CustomField>