force-app/main/default/objects/Employee_Time_Sheet__c/fields/Total_Km__c.field-meta.xml
<CustomField>
    <fullName>Total_Km__c</fullName>
    <formula>Check_Out_Km__c  -  Check_In_Km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>