force-app/main/default/objects/Employee_Time_Sheet__c/fields/Total_Kms__c.field-meta.xml
<CustomField>
    <fullName>Total_Kms__c</fullName>
    <label>Total Km</label>
    <summarizedField>Employee_Time_Sheet_Line_Item__c.Total_Km__c</summarizedField>
    <summaryForeignKey>Employee_Time_Sheet_Line_Item__c.Employee_Time_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>