force-app/main/default/objects/Employee_Time_Sheet__c/fields/Total_Working_Hours1__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours1__c</fullName>
    <label>Total Working Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>