force-app/main/default/objects/Employee_Time_Sheet__c/fields/Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours__c</fullName>
    <label>Total Working Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>